Bug 89337 - [Chromium] Style Fix in WebDeviceOrientationController
Summary: [Chromium] Style Fix in WebDeviceOrientationController
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-18 02:23 PDT by Amy Ousterhout
Modified: 2012-06-19 08:39 PDT (History)
2 users (show)

See Also:


Attachments
Patch (1.62 KB, patch)
2012-06-18 02:27 PDT, Amy Ousterhout
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Amy Ousterhout 2012-06-18 02:23:05 PDT
[Chromium] Style Fix in WebDeviceOrientationController
Comment 1 Amy Ousterhout 2012-06-18 02:27:02 PDT
Created attachment 148073 [details]
Patch
Comment 2 Hans Wennborg 2012-06-18 02:50:44 PDT
Comment on attachment 148073 [details]
Patch

Looks good to me. Thanks!
Comment 3 Steve Block 2012-06-19 07:43:50 PDT
Comment on attachment 148073 [details]
Patch

r=me
Comment 4 WebKit Review Bot 2012-06-19 08:38:24 PDT
Comment on attachment 148073 [details]
Patch

Clearing flags on attachment: 148073

Committed r120716: <http://trac.webkit.org/changeset/120716>
Comment 5 WebKit Review Bot 2012-06-19 08:38:28 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Amy Ousterhout 2012-06-19 08:39:25 PDT
thanks for the review!