[Chromium] Style Fix in WebDeviceOrientationController https://bugs.webkit.org/show_bug.cgi?id=89337

Patch by Amy Ousterhout <aousterh@chromium.org> on 2012-06-19
Reviewed by Steve Block.

Changing a local variable from a PassRefPtr to a RefPtr in order to be consistent with the style guide.

* src/WebDeviceOrientationController.cpp:
(WebKit::WebDeviceOrientationController::didChangeDeviceOrientation):

Canonical link: https://commits.webkit.org/107326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120716 268f45cc-cd09-0410-ab3c-d52691b4dbfc